syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "PaymentProto";
option objc_class_prefix = "HLW";

package helloworld;

service Payment {
    rpc PaymentInfo (PaymentRequest) returns (PaymentResponse) {
    }
}

message PaymentRequest {
    int32 id = 1;
}

message PaymentResponse {
    string paymentInfo = 1;
    int32 id = 3;
}
